# nidl2cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  conanfile.txt  readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ports/idlfe/: portfile.cmake
src/: CMakeLists.txt  Client.cpp  Client.h  Code.cpp  Code.h  CodeGenBase.cpp  CodeGenBase.h  Compiler.cpp  Compiler.h  Component.cpp  Header.cpp  Header.h  IndentedOut.cpp  IndentedOut.h  Options.h  Proxy.cpp  Proxy.h  Servant.cpp  Servant.h  main.cpp  pch.h
test/ORB/: Test_I1.idl
